fix: content wrapper breakpoint gap

--- a/src/_includes/assets/styles/layout/base.scss
+++ b/src/_includes/assets/styles/layout/base.scss
@@ -11,10 +11,9 @@ main {
   }
 
   .content-wrapper {
-    margin-top: rem(40);
     margin-top: rem(107);
 
-    @media (min-width: 63.1875rem) { // 1011px
+    @media (min-width: 58.4375rem) { // 935px
       margin-top: rem(61);
     }
 
